# Agentic-AI-mini-projects

advance ai stock analysis langchain/: .gitignore  README.md
advance ai stock analysis langchain/backend/: main.py  pyproject.toml
advance ai stock analysis langchain/frontend/: package-lock.json
chatbot-with-multipletools/: CONTRIBUTING.md  README.md  chatbotwithmultipletools.ipynb  requirements.txt
rag-knowledge-base/: README.md  plan.md
rag-knowledge-base/backend/: .gitignore  README.md  pyproject.toml
rag-knowledge-base/backend/app/: main.py
rag-knowledge-base/backend/app/api/: chat.py  upload.py
rag-knowledge-base/backend/app/core/: config.py
rag-knowledge-base/backend/app/models/: chat.py
rag-knowledge-base/backend/app/rag/: chain.py  embeddings.py  prompts.py  splitter.py  vectorstore.py
rag-knowledge-base/backend/app/services/: ingestion.py
rag-knowledge-base/frontend/: vite.config.js
rag-knowledge-base/frontend/src/: App.css  App.jsx
research agent/: agents.py  pyproject.toml  tools.py
trust docs/: .gitignore  README.md
trust docs/backend/: .gitignore  README.md  package-lock.json  package.json  server.js
trust docs/frontend/: README.md
trust docs/frontend/src/: App.jsx
