[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.2",
    "lxml>=6.1.0",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]
